[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=70.0"]

[project]
name = "ec_utils"
authors = [
    {name = "Tim Tröndle", email = "tim.troendle@usys.ethz.ch"},
    {name = "Ivan Ruiz Manuel", email = "i.ruizmanuel@tudelft.nl"}
]
description = "Utility library to glue the ec_modules workflows"
readme = "README.md"
license = {file = "LICENSE"}
# complete classifier list:
# http://pypi.org/classifiers/
classifiers = [
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
keywords = ['utilities', 'workflows']

requires-python = ">=3.8"
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/calliope-project/ec_utils"
Repository = "https://github.com/calliope-project/ec_utils"
Issues = "https://github.com/calliope-project/ec_utils/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ec_utils.__version__"}
dependencies = { file = ["requirements/base.txt"] }
optional-dependencies.geo = { file = ["requirements/geo.txt"] }
optional-dependencies.dev = { file = ["requirements/dev.txt"] }

[tool.codespell]
skip = 'tests/*.py,AUTHORS,*.shp,*.geojson'
count = ''
quiet-level = 3
ignore-words-list = "socio-economic,manuel"

[tool.ruff]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "PT", "C90", "UP"]
exclude = [".eggs"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]
"tests/**" = ["D100", "D103", "PT004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.format]
exclude = [".*.egg-info", "requirements/**"]
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]
